--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -27,8 +27,9 @@ body {
 
     --border: 0 0% 0%;
 
-    --input: 240 5.9% 90%;
+    --input: 0 5.9% 90%;
     --ring: 240 10% 3.9%;
+
     --chart-1: 12 76% 61%;
     --chart-2: 173 58% 39%;
     --chart-3: 197 37% 24%;
@@ -94,5 +95,8 @@ body {
   body {
     @apply bg-background text-foreground;
     min-height: 100svh;
+  }
+  .icon {
+    @apply w-4 h-4;
   }
 }
