--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -26,6 +26,7 @@ body {
     --destructive-foreground: 0 0% 98%;
 
     --border: 0 0% 0%;
+    --base-border: hsl(var(--border) / 0.05);
 
     --input: 0 5.9% 90%;
     --ring: 240 10% 3.9%;
@@ -50,39 +51,36 @@ body {
   }
 
   .dark {
-    --background: 0 0% 11.76%;
+    --background: 0 0% 8.5%;
+
     --foreground: 0 0% 98%;
 
-    --card: 0 0% 11.76%;
+    --card: 0deg 0% 10.9%;
     --card-foreground: 0 0% 98%;
 
-    --popover: 240 10% 3.9%;
+    --popover: 0 0% 3.9%;
     --popover-foreground: 0 0% 98%;
     --primary: 0 0% 98%;
-
-    --primary-foreground: 240 5.9% 10%;
-    --secondary: 240 3.7% 15.9%;
-
+    --primary-foreground: 0 0% 9%;
+    --secondary: 0 0% 14.9%;
     --secondary-foreground: 0 0% 98%;
-    --muted: 240 3.7% 15.9%;
-    --muted-foreground: 240 5% 64.9%;
-
-    --accent: 240 3.7% 15.9%;
+    --muted: 0 0% 14.9%;
+    --muted-foreground: 0 0% 63.9%;
+    --accent: 0 0% 14.9%;
     --accent-foreground: 0 0% 98%;
-
     --destructive: 0 62.8% 30.6%;
     --destructive-foreground: 0 0% 98%;
-
-    --border: 0 0% 99.76%;
-
+    --border: 0 0% 14.9%;
     --input: 0 0% 14.9%;
+    --ring: 0 0% 83.1%;
 
-    --ring: 240 4.9% 83.9%;
     --chart-1: 220 70% 50%;
     --chart-2: 160 60% 45%;
     --chart-3: 30 80% 55%;
     --chart-4: 280 65% 60%;
     --chart-5: 340 75% 55%;
+
+    --base-border: hsl(var(--border) / 1);
 
     /* editor stuff */
     --novel-highlight-default: #000000;
@@ -99,8 +97,9 @@ body {
 
 @layer base {
   * {
-    @apply border-border/5;
+    border-color: var(--base-border);
   }
+
   body {
     @apply bg-background text-foreground;
     min-height: 100svh;
