add opengrah image

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -50,6 +50,8 @@ body {
     --novel-highlight-orange: #faebdd;
     --novel-highlight-pink: #faf1f5;
     --novel-highlight-gray: #f1f1ef;
+
+    --text-edge-outline-color: rgba(0, 0, 0, 0.3);
   }
 
   .dark {
@@ -94,6 +96,8 @@ body {
     --novel-highlight-orange: #5c3a1a;
     --novel-highlight-pink: #5c1a3a;
     --novel-highlight-gray: #3a3a3a;
+
+    --text-edge-outline-color: rgba(255, 255, 255, 0.3);
   }
 }
 
@@ -112,6 +116,6 @@ body {
   }
 
   .text-edge-outline {
-    -webkit-text-stroke: 1px rgba(255, 255, 255, 0.3);
+    -webkit-text-stroke: 1px var(--text-edge-outline-color);
   }
 }
